# nonebot-plugin-calc-game

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_calc_game/: __init__.py  config.py  gamedata.py  gameplay.py  gamerror.py  tools.py
